P3/ejudge_contests/03/var/archive/xmlreports/0/0/0/000003
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="3" judge-id="3" status="CE" scoring="ACM" run-tests="0" contest-id="303" compile-error="yes" >
  <uuid>74a0bb12-96ba-41b4-9ff3-ee0cc5abde4f</uuid>
  <compiler_output>000003.cpp: In function 'int main()':
000003.cpp:11:7: error: 'i' was not declared in this scope
  for (i=1;i&lt;=n;i++){
       ^
</compiler_output>
</testing-report>
